--- a/local.conf
+++ b/local.conf
@@ -1,5 +1,4 @@
-# put in `/etc/sysctl.d/local.conf`
-# run `sysctl --system`
+# REF: https://github.com/shadowsocks/shadowsocks/wiki/Optimizing-Shadowsocks
 
 # max open files
 fs.file-max = 51200
